--- a/line.html
+++ b/line.html
@@ -35,6 +35,7 @@
             new THREE.Vector3(0, 100, 0)
             );
           line = new THREE.Line(g, m);
+          // You can even laycast!
           scene.add(line);
         }
 
