--- a/sine.html
+++ b/sine.html
@@ -8,6 +8,9 @@
       window.onload = function() {
         var camera, scene, renderer, g, m, line;
         var controls;
+        var s = 0;
+        var line;
+        var POINTS_NUM = 100;
 
         function init() {
           // camera
@@ -15,7 +18,7 @@
           camera.position.z = 2000;
           // scene
           scene = new THREE.Scene();
-          scene.background = new THREE.Color( 0x000000 );
+          scene.background = new THREE.Color( 0xffffff );
           // renderer
           // renderer = new THREE.CSS3DRenderer();
           renderer = new THREE.WebGLRenderer();
@@ -25,21 +28,33 @@
           // controls
           controls = new THREE.TrackballControls( camera, renderer.domElement );
           controls.addEventListener( 'change', renderer );
-          // line
-          m = new THREE.LineBasicMaterial({ color: 0x0000ff });
-          g = new THREE.Geometry();
-          g.vertices.push(
-            new THREE.Vector3(0, 0, 0),
-            new THREE.Vector3(100, 0, 0),
-            new THREE.Vector3(100, 100, 0),
-            new THREE.Vector3(0, 100, 0)
-            );
+          // object
+          init_line();
+        }
+
+        function init_line() {
+          var m = new THREE.LineBasicMaterial({ color:0xff00aa, linewidth: 2});
+          var g = new THREE.BufferGeometry();
+          var ps = new Float32Array(POINTS_NUM * 3);
+          g.addAttribute('position', new THREE.BufferAttribute( ps, 3 ));
           line = new THREE.Line(g, m);
-          // You can even laycast!
           scene.add(line);
+        }
+ 
+        function update_line() {
+          s += 1;
+          var ps = line.geometry.attributes.position.array;
+          for (var i = 0; i < POINTS_NUM; i += 3) {
+            ps[i + 0] = i * 5;
+            ps[i + 1] = Math.sin((i + s) / 10) * 100;
+            ps[i + 2] = 0;
+          }
+          // Fucking manual update!
+          line.geometry.attributes.position.needsUpdate = true;
         }
 
         function animate() {
+          update_line();
           requestAnimationFrame( animate );
           renderer.render( scene, camera );
           try {
