--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js" integrity="sha512-LF8ZB1iTwi4Qvkm4pekHG4a437Y9Af5ZuwbnW4GTbAWQeR2E4KW8WF+xH8b9psevV7wIlDMx1MH9YfPqgKhA/Q==" crossorigin="anonymous"></script>
 	<body>
 		<canvas id="canvas"></canvas>
+		<div id="view1"></div>
+		<div id="view2"></div>
 		<script>
-			let camera, scene, renderer, plane, hoge;
+			let camera, scene, renderer, plane;
 			let ps = [];
 
 			init();
@@ -35,7 +37,8 @@
 					// plane.rotation.x = -Math.PI / 2;
 					plane.position.x = 0;
 					plane.position.z = 0;
-					plane.position.y = i * 10;
+					plane.position.y = 10;
+					plane.rotation.x = 0.2;
 					scene.add(plane);
 					if (i != 0) {
 						_.last(ps).add(plane);
@@ -45,24 +48,24 @@
 
 				const canvas = document.getElementById("canvas");
 				renderer = new THREE.WebGLRenderer({canvas});
-				renderer.setSize(500, 500);
+				renderer.setScissor(0, 100, 100, 100);
+				renderer.setViewport(0, 100, 100, 100);
 
-				// const controls = new THREE.OrbitControls(camera, renderer.domElement);
+				const v1 = document.getElementById("view1");
+				const v2 = document.getElementById("view2");
+
+
+				const controls = new THREE.OrbitControls(camera, renderer.domElement);
 				var param = {kick: 0.01, punch: false, fuga: "1"};
 
 				renderer.setAnimationLoop( function () {
 					renderer.render(scene, camera);
-					// controls.update();
+					controls.update();
 					for (var p of ps) {
-						p.rotation.x += param.kick;
+						p.rotation.z = Math.sin(param.kick) / 5;
+						param.kick += 0.01;
 					}
 				} );
-
-				const gui = new dat.GUI();
-				gui.add(param, "kick", 0, 1);
-				gui.add(param, "fuga",  ["1", "a"]);
-				gui.add(param, "punch");
-
 			}
 
 		</script>
