--- a/index.html
+++ b/index.html
@@ -7,40 +7,103 @@
 	<body>
 		<canvas id="canvas" style="width:500px;height:500px;"></canvas>
 		<script>
-			let camera, scene, renderer, plane;
-
+			let camera, scene, renderer, plane, controls, geometry, cube;
 			init();
 			function init() {
 				scene = new THREE.Scene();
 				scene.background = new THREE.Color(0xaaaaaa);
-
 				camera = new THREE.PerspectiveCamera(45, 1, 1, 2000);
-				camera.position.set(0, 200, 0);
-				camera.rotation.set(-Math.PI / 2, 0, 0);
-
+				camera.position.set(0, 10, 0);
+				camera.updateProjectionMatrix()
 				const grid = new THREE.GridHelper(200, 20, 0x000000, 0x000000);
 				grid.material.opacity = 0.3;
-				grid.material.transparent = true;
+				grid.material.transparent = false;
 				scene.add( grid );
-
 				const canvas = document.getElementById("canvas");
 				renderer = new THREE.WebGLRenderer({canvas});
-
-				const controls = new THREE.OrbitControls(camera, renderer.domElement);
-
+				controls = new THREE.OrbitControls(camera, renderer.domElement);
+				controls.rotateUp(-1);
+				controls.rotateLeft(1);
 				renderer.setSize(500, 500);
 
-				renderer.setAnimationLoop( function () {
-					camera.aspect = 500 / 500.0 ;
-      				camera.updateProjectionMatrix();
+				renderer.setAnimationLoop( function (e) {
 					renderer.render(scene, camera);
-
 					controls.update();
 				} );
 
+				for (var x = -10; x < 10; x++) {
+				for (var y = -10; y < 10; y++) {
+				geometry = new THREE.Geometry();
+				geometry.vertices.push(
+					new THREE.Vector3(-1, -1,  1),  // 0
+					new THREE.Vector3( 1, -1,  1),  // 1
+					new THREE.Vector3(-1,  1,  1),  // 2
+					new THREE.Vector3( 1,  1,  1),  // 3
+					new THREE.Vector3(-1, -1, -1),  // 4
+					new THREE.Vector3( 1, -1, -1),  // 5
+					new THREE.Vector3(-1,  1, -1),  // 6
+					new THREE.Vector3( 1,  1, -1),  // 7
+				);
+				geometry.faces.push(
+					// front
+					new THREE.Face3(0, 3, 2),
+					new THREE.Face3(0, 1, 3),
+					// right
+					new THREE.Face3(1, 7, 3),
+					new THREE.Face3(1, 5, 7),
+					// back
+					new THREE.Face3(5, 6, 7),
+					new THREE.Face3(5, 4, 6),
+					// left
+					new THREE.Face3(4, 2, 6),
+					new THREE.Face3(4, 0, 2),
+					// top
+					new THREE.Face3(2, 7, 6),
+					new THREE.Face3(2, 3, 7),
+					// bottom
+					new THREE.Face3(4, 1, 0),
+					new THREE.Face3(4, 5, 1),
+				);
+
+				geometry.faceVertexUvs[0].push(
+					// front
+					[ new THREE.Vector2(0, 0), new THREE.Vector2(1, 1), new THREE.Vector2(0, 1) ],
+					[ new THREE.Vector2(0, 0), new THREE.Vector2(1, 0), new THREE.Vector2(1, 1) ],
+					// right
+					[ new THREE.Vector2(0, 0), new THREE.Vector2(1, 1), new THREE.Vector2(0, 1) ],
+					[ new THREE.Vector2(0, 0), new THREE.Vector2(1, 0), new THREE.Vector2(1, 1) ],
+					// back
+					[ new THREE.Vector2(0, 0), new THREE.Vector2(1, 1), new THREE.Vector2(0, 1) ],
+					[ new THREE.Vector2(0, 0), new THREE.Vector2(1, 0), new THREE.Vector2(1, 1) ],
+					// left
+					[ new THREE.Vector2(0, 0), new THREE.Vector2(1, 1), new THREE.Vector2(0, 1) ],
+					[ new THREE.Vector2(0, 0), new THREE.Vector2(1, 0), new THREE.Vector2(1, 1) ],
+					// top
+					[ new THREE.Vector2(0, 0), new THREE.Vector2(1, 1), new THREE.Vector2(0, 1) ],
+					[ new THREE.Vector2(0, 0), new THREE.Vector2(1, 0), new THREE.Vector2(1, 1) ],
+					// bottom
+					[ new THREE.Vector2(0, 0), new THREE.Vector2(1, 1), new THREE.Vector2(0, 1) ],
+					[ new THREE.Vector2(0, 0), new THREE.Vector2(1, 0), new THREE.Vector2(1, 1) ],
+				);
+				geometry.computeFaceNormals();
+				
+				const loader = new THREE.TextureLoader();
+				const tex = loader.load('test.png');
+
+				const mat = new THREE.MeshPhongMaterial({map: tex});
+				cube = new THREE.Mesh(geometry, mat);
+				cube.position.x = x * 2;
+				cube.position.z = y * 2;
+				cube.position.y = _.random(0, 2);
+				scene.add(cube);
+				
+				}
+				}
+
+				const light = new THREE.DirectionalLight(0xffffff, 1);
+				light.position.set(0, 1, 0);
+				scene.add(light);
 			}
-
 		</script>
-
 	</body>
 </html>
