--- a/old/gyro.html
+++ b/old/gyro.html
@@ -1,72 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js" integrity="sha512-90vH1Z83AJY9DmlWa8WkjkV79yfS2n2Oxhsi2dZbIv0nC4E6m5AbH8Nh156kkM7JePmqD6tcZsfad1ueoaovww==" crossorigin="anonymous"></script>
-	<script src="js/three.min.js"></script>
-    <script src="js/controls/OrbitControls.js"></script>
-
 	<body>
+		<div>Code from: https://sensor-js.xyz/demo.html</div>
+		<button id="start_demo">Start demo</button>
+		<div id="motion">
+			<p id="Accelerometer_gx"></p>
+			<p id="Accelerometer_gy"></p>
+			<p id="Accelerometer_gz"></p>
+			<p id="Accelerometer_x"></p>
+			<p id="Accelerometer_y"></p>
+			<p id="Accelerometer_z"></p>
+			<p id="Orientation_a"></p>
+			<p id="Orientation_b"></p>
+			<p id="Orientation_g"></p>
+		</div>
 		<script>
-
-			let camera, scene, renderer, plane;
-
-			init();
-
-			function init() {
-
-				const container = document.createElement( 'div' );
-				document.body.appendChild( container );
-
-				camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 1, 2000 );
-				camera.position.set( 0, 200, 0 );
-				camera.rotation.set( -Math.PI / 2, 0, 0 );
-
-				scene = new THREE.Scene();
-				scene.background = new THREE.Color( 0xa0a0a0 );
-
-				const ambientLight = new THREE.AmbientLight( 0xaaaaaa, 1.75 );
-				scene.add( ambientLight );
-
-				const grid = new THREE.GridHelper( 200, 20, 0x000000, 0x000000 );
-				grid.material.opacity = 0.3;
-				grid.material.transparent = true;
-				scene.add( grid );
-
-				// here
-				var geo = new THREE.TorusGeometry(30, 10, 65, 100);
-				var mat = new THREE.MeshNormalMaterial( {
-					color: 0xff00ff,
-					side: THREE.DoubleSide
-				} );
-				obj = new THREE.Mesh(geo, mat);
-				obj.rotation.x = -Math.PI / 2;
-				scene.add(obj);
-
-				renderer = new THREE.WebGLRenderer( { antialias: true } );
-				renderer.setPixelRatio( window.devicePixelRatio );
-				renderer.setSize( window.innerWidth, window.innerHeight );
-				renderer.shadowMap.enabled = true;
-				renderer.physicallyCorrectLights = true;
-				renderer.gammaFactor = 1.18;
-				renderer.outputEncoding = THREE.sRGBEncoding;
-				container.appendChild( renderer.domElement );
-
-				const controls = new THREE.OrbitControls( camera, renderer.domElement );
-
-				renderer.setAnimationLoop( function () {
-					renderer.render( scene, camera );
-					controls.update();
-				} );
-
-				window.addEventListener( 'resize', onWindowResize, false );
+			function handleOrientation(event) {
+			updateFieldIfNotNull('Orientation_a', event.alpha);
+			updateFieldIfNotNull('Orientation_b', event.beta);
+			updateFieldIfNotNull('Orientation_g', event.gamma);
+			// incrementEventCount();
 			}
 
-			function onWindowResize() {
-				camera.aspect = window.innerWidth / window.innerHeight;
-				camera.updateProjectionMatrix();
-				renderer.setSize( window.innerWidth, window.innerHeight );
+			function incrementEventCount(){
+			let counterElement = document.getElementById("num-observed-events")
+			let eventCount = parseInt(counterElement.innerHTML)
+			counterElement.innerHTML = eventCount + 1;
 			}
 
+			function updateFieldIfNotNull(fieldName, value, precision=10){
+			if (value != null)
+				document.getElementById(fieldName).innerHTML = value.toFixed(precision);
+			}
+
+			function handleMotion(event) {
+			updateFieldIfNotNull('Accelerometer_gx', event.accelerationIncludingGravity.x);
+			updateFieldIfNotNull('Accelerometer_gy', event.accelerationIncludingGravity.y);
+			updateFieldIfNotNull('Accelerometer_gz', event.accelerationIncludingGravity.z);
+
+			updateFieldIfNotNull('Accelerometer_x', event.acceleration.x);
+			updateFieldIfNotNull('Accelerometer_y', event.acceleration.y);
+			updateFieldIfNotNull('Accelerometer_z', event.acceleration.z);
+
+			// updateFieldIfNotNull('Accelerometer_i', event.interval, 2);
+
+			// updateFieldIfNotNull('Gyroscope_z', event.rotationRate.alpha);
+			// updateFieldIfNotNull('Gyroscope_x', event.rotationRate.beta);
+			// updateFieldIfNotNull('Gyroscope_y', event.rotationRate.gamma);
+			// incrementEventCount();
+			}
+
+			let is_running = false;
+			let demo_button = document.getElementById("start_demo");
+			demo_button.onclick = function(e) {
+			e.preventDefault();
+			
+			// Request permission for iOS 13+ devices
+			if (
+				DeviceMotionEvent &&
+				typeof DeviceMotionEvent.requestPermission === "function"
+			) {
+				DeviceMotionEvent.requestPermission();
+			}
+			
+			if (is_running){
+				window.removeEventListener("devicemotion", handleMotion);
+				window.removeEventListener("deviceorientation", handleOrientation);
+				demo_button.innerHTML = "Start demo";
+				demo_button.classList.add('btn-success');
+				demo_button.classList.remove('btn-danger');
+				is_running = false;
+			}else{
+				window.addEventListener("devicemotion", handleMotion);
+				window.addEventListener("deviceorientation", handleOrientation);
+				document.getElementById("start_demo").innerHTML = "Stop demo";
+				demo_button.classList.remove('btn-success');
+				demo_button.classList.add('btn-danger');
+				is_running = true;
+			}
+			};
+
+			/*
+			Light and proximity are not supported anymore by mainstream browsers.
+			window.addEventListener('devicelight', function(e) {
+			document.getElementById("DeviceLight").innerHTML="AmbientLight current Value: "+e.value+" Max: "+e.max+" Min: "+e.min;
+			});
+
+			window.addEventListener('lightlevel', function(e) {
+			document.getElementById("Lightlevel").innerHTML="Light level: "+e.value;
+			});
+
+			window.addEventListener('deviceproximity', function(e) {
+			document.getElementById("DeviceProximity").innerHTML="DeviceProximity current Value: "+e.value+" Max: "+e.max+" Min: "+e.min;
+			});
+
+			window.addEventListener('userproximity', function(event) {
+			document.getElementById("UserProximity").innerHTML="UserProximity: "+event.near;
+			});
+			*/
 		</script>
-
 	</body>
 </html>
