--- a/old/gyro.html
+++ b/old/gyro.html
@@ -1,103 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 	<body>
-		<div>Code from: https://sensor-js.xyz/demo.html</div>
-		<button id="start_demo">Start demo</button>
-		<div id="motion">
-			<p id="Accelerometer_gx"></p>
-			<p id="Accelerometer_gy"></p>
-			<p id="Accelerometer_gz"></p>
-			<p id="Accelerometer_x"></p>
-			<p id="Accelerometer_y"></p>
-			<p id="Accelerometer_z"></p>
-			<p id="Orientation_a"></p>
-			<p id="Orientation_b"></p>
-			<p id="Orientation_g"></p>
-		</div>
+		<button id="start_demo">Start Demo</button>
 		<script>
+			let g = {};
+			g.orien = {a: 0, b: 0, g: 0};
 			function handleOrientation(event) {
-			updateFieldIfNotNull('Orientation_a', event.alpha);
-			updateFieldIfNotNull('Orientation_b', event.beta);
-			updateFieldIfNotNull('Orientation_g', event.gamma);
-			// incrementEventCount();
+				g.orien.a = event.alpha;
+				g.orien.b = event.beta;
+				g.orien.c = event.gamma;
 			}
-
-			function incrementEventCount(){
-			let counterElement = document.getElementById("num-observed-events")
-			let eventCount = parseInt(counterElement.innerHTML)
-			counterElement.innerHTML = eventCount + 1;
-			}
-
-			function updateFieldIfNotNull(fieldName, value, precision=10){
-			if (value != null)
-				document.getElementById(fieldName).innerHTML = value.toFixed(precision);
-			}
-
-			function handleMotion(event) {
-			updateFieldIfNotNull('Accelerometer_gx', event.accelerationIncludingGravity.x);
-			updateFieldIfNotNull('Accelerometer_gy', event.accelerationIncludingGravity.y);
-			updateFieldIfNotNull('Accelerometer_gz', event.accelerationIncludingGravity.z);
-
-			updateFieldIfNotNull('Accelerometer_x', event.acceleration.x);
-			updateFieldIfNotNull('Accelerometer_y', event.acceleration.y);
-			updateFieldIfNotNull('Accelerometer_z', event.acceleration.z);
-
-			// updateFieldIfNotNull('Accelerometer_i', event.interval, 2);
-
-			// updateFieldIfNotNull('Gyroscope_z', event.rotationRate.alpha);
-			// updateFieldIfNotNull('Gyroscope_x', event.rotationRate.beta);
-			// updateFieldIfNotNull('Gyroscope_y', event.rotationRate.gamma);
-			// incrementEventCount();
-			}
-
-			let is_running = false;
-			let demo_button = document.getElementById("start_demo");
-			demo_button.onclick = function(e) {
-			e.preventDefault();
-			
-			// Request permission for iOS 13+ devices
-			if (
-				DeviceMotionEvent &&
-				typeof DeviceMotionEvent.requestPermission === "function"
-			) {
-				DeviceMotionEvent.requestPermission();
-			}
-			
-			if (is_running){
-				window.removeEventListener("devicemotion", handleMotion);
-				window.removeEventListener("deviceorientation", handleOrientation);
-				demo_button.innerHTML = "Start demo";
-				demo_button.classList.add('btn-success');
-				demo_button.classList.remove('btn-danger');
-				is_running = false;
-			}else{
-				window.addEventListener("devicemotion", handleMotion);
+			let start_btn = document.getElementById("start_demo");
+			start_btn.onclick = function(e) {
+				e.preventDefault();
+				let dm = DeviceMotionEvent;
+				let ty = typeof DeviceMotionEvent.requestPermission === "function";
+				if (dm && ty) {
+					DeviceMotionEvent.requestPermission();
+				}
+				start_btn.remove();
 				window.addEventListener("deviceorientation", handleOrientation);
-				document.getElementById("start_demo").innerHTML = "Stop demo";
-				demo_button.classList.remove('btn-success');
-				demo_button.classList.add('btn-danger');
-				is_running = true;
-			}
 			};
-
-			/*
-			Light and proximity are not supported anymore by mainstream browsers.
-			window.addEventListener('devicelight', function(e) {
-			document.getElementById("DeviceLight").innerHTML="AmbientLight current Value: "+e.value+" Max: "+e.max+" Min: "+e.min;
-			});
-
-			window.addEventListener('lightlevel', function(e) {
-			document.getElementById("Lightlevel").innerHTML="Light level: "+e.value;
-			});
-
-			window.addEventListener('deviceproximity', function(e) {
-			document.getElementById("DeviceProximity").innerHTML="DeviceProximity current Value: "+e.value+" Max: "+e.max+" Min: "+e.min;
-			});
-
-			window.addEventListener('userproximity', function(event) {
-			document.getElementById("UserProximity").innerHTML="UserProximity: "+event.near;
-			});
-			*/
 		</script>
 	</body>
 </html>
